Fix logo stretching on mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -261,7 +261,6 @@ nav .brand-logo {
 
 nav .brand-logo img {
   max-width: 75%;
-  max-height: 75%;
 }
 nav > ul {
   order: 3;
